final changes in CLM UI

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -74,21 +74,7 @@
                             <p><strong>{% trans "Device Type" %}:</strong> {{ device.get_device_type_display }}</p>
                             <p><strong>{% trans "Created" %}:</strong> {{ device.created_at|date:"Y-m-d H:i" }}</p>
 
-                            {% if device.onboarding_config %}
-                                <p><strong>{% trans "Onboarding Protocol" %}:</strong>
-                                    {{ device.onboarding_config.get_onboarding_protocol_display }}
-                                </p>
-                                <p><strong>{% trans "Onboarding Status" %}:</strong>
-                                    {{ device.onboarding_config.get_onboarding_status_display }}
-                                </p>
-                                {% if device.onboarding_config.get_pki_protocols %}
-                                    <p><strong>{% trans "Enabled PKI Protocols" %}:</strong>
-                                        {% for protocol in device.onboarding_config.get_pki_protocols %}
-                                            {{ protocol.label }}{% if not forloop.last %}, {% endif %}
-                                        {% endfor %}
-                                    </p>
-                                {% endif %}
-                            {% elif device.no_onboarding_config %}
+                            {% if device.no_onboarding_config %}
                                 <p><strong>{% trans "Configuration Type" %}:</strong> {% trans "No Onboarding" %}</p>
 
                             {% endif %}
