--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -82,8 +82,9 @@
                     </div>
                 </div>
             </div>
-<div class="card-body p-3">
+
             {% if device.onboarding_config %}
+            <div class="card-body p-3">
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
                     {% if issue_domain_cred_onboarding_url %}
@@ -94,7 +95,7 @@
                             {% trans "Issue new Domain Credential" %}
                         </a>
                 </h2>
-    <hr></div>
+    </div><hr>
                 <div class="mb-5">
                     <table class="table">
                         <thead>
@@ -153,7 +154,7 @@
                 {% include 'trustpoint/pagination.html' with page_obj=domain_credentials %}
             {% endif %}
 
-<div class="card-body p-2">
+<div class="card-body ">
             {% if device.onboarding_config %}
                 {% if device.onboarding_config.get_pki_protocols %}
                     <h2 class="d-flex justify-content-between align-items-center">
