--- a/trustpoint/templates/devices/credentials/issue_credential.html
+++ b/trustpoint/templates/devices/credentials/issue_credential.html
@@ -3,30 +3,31 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-
-        <div class="card">
-            <div class="card-header">
-                <div>
-                    <h1>{{ heading }}</h1>
+<div class="card">
+    <div class="card-header">
+        <h1>{{ heading }}</h1>
+    </div>
+    <div class="card-body">
+        <div class="row justify-content-center">
+            {% for section in sections %}
+            <div class="col-md-4 d-flex align-items-stretch">
+                <div class="card w-100 mb-3">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">{{ section.heading }}</h5>
+                        <hr>
+                        <p class="card-text flex-grow-1">{{ section.description }}</p>
+                        <a href="{% url section.url pk=device.pk %}"
+                           class="btn mt-auto w-100 {% if section.enabled == False %} btn-secondary disabled" disabled {% else %} btn-primary" {% endif %}>
+                          {{ section.heading }}
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="card-body">
-                {% for section in sections %}
-                <div class="mb-5">
-                    <h2>{{ section.heading }}</h2>
-                    <hr>
-                    <p>{{ section.description }}</p>
-                    <a href="{% url section.url pk=device.pk %}" class="btn min-width-30{% if section.enabled == False %} btn-secondary disabled" disabled {% else %} btn-primary" {% endif %}>{{ section.heading }}</a>
-                </div>
-                {% endfor %}
-
-            </div>
-            <div class="card-footer d-flex justify-content-between align-items-center">
-                <div class="tp-card-btn-footer m-1">
-                    <a href="{% url clm_url pk=device.pk %}" class="btn btn-secondary min-width-30">{% trans "Cancel" %}</a>
-                </div>
-            </div>
+            {% endfor %}
         </div>
-
-
+    </div>
+    <div class="card-footer">
+        <a href="{% url clm_url pk=device.pk %}" class="btn btn-secondary w-25">{% trans "Cancel" %}</a>
+    </div>
+</div>
 {% endblock content %}
