--- a/trustpoint/templates/trustpoint/base.html
+++ b/trustpoint/templates/trustpoint/base.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="tp-menu-group">
-                <a href="{% url 'workflows:definition_list' %}" class="tp-menu-head {% if page_category == 'workflows' %}tp-menu-active{% endif %}">
+                <a href="{% url 'workflows:definition_table' %}" class="tp-menu-head {% if page_category == 'workflows' %}tp-menu-active{% endif %}">
                     <svg class="bi" fill="currentColor" role="img">
                         <use href="{% static 'img/icons.svg' %}#icon-settings"></use></svg>
                         {% translate "Workflows" %}
@@ -101,9 +101,9 @@
                     </div>
                 </a>
                 <div class="tp-menu-collapse {% if page_category == 'workflows' %}show{% endif %}">
-                    <a href="{% url 'workflows:definition_list' %}" class="tp-menu-item {% if page_name == 'definitions' %}tp-menu-active{% endif %}">{% trans "Workflows" %}</a>
+                    <a href="{% url 'workflows:definition_table' %}" class="tp-menu-item {% if page_name == 'definitions' %}tp-menu-active{% endif %}">{% trans "Workflows" %}</a>
                     <a href="{% url 'workflows:definition_wizard' %}" class="tp-menu-item {% if page_name == 'wizard' %}tp-menu-active{% endif %}">{% trans "Create new workflow" %}</a>
-                    <a href="{% url 'workflows:pending_list' %}" class="tp-menu-item {% if page_name == 'pending' %}tp-menu-active{% endif %}">{% trans "Pending" %}</a>
+                    <a href="{% url 'workflows:pending_table' %}" class="tp-menu-item {% if page_name == 'pending' %}tp-menu-active{% endif %}">{% trans "Pending" %}</a>
                 </div>
             </div>
             <div class="tp-menu-footer">
