--- a/trustpoint/templates/workflows/definition_table.html
+++ b/trustpoint/templates/workflows/definition_table.html
@@ -1,4 +1,3 @@
-{# workflows/templates/workflows/definition_list.html #}
 {% extends 'trustpoint/base.html' %}
 {% load static %}
 
@@ -6,7 +5,7 @@
   <h1 class="mb-4">Workflows</h1>
   <div class="mb-3">
   <a class="btn btn-primary me-2" href="{% url 'workflows:definition_wizard' %}">+ Create New Workflow</a>
-  <a class="btn btn-secondary me-2" href="{% url 'workflows:pending_list' %}">Pending Approvals</a>
+  <a class="btn btn-secondary me-2" href="{% url 'workflows:pending_table' %}">Pending Approvals</a>
   <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#importModal">
     Import…
   </button>
