--- a/trustpoint/templates/workflows/pending_detail.html
+++ b/trustpoint/templates/workflows/pending_detail.html
@@ -199,13 +199,13 @@
         >
           {% trans 'Reject' %}
         </button>
-        <a href="{% url 'workflows:pending_list' %}" class="btn btn-secondary">
+        <a href="{% url 'workflows:pending_table' %}" class="btn btn-secondary">
           &larr; {% trans 'Back to Pending' %}
         </a>
       </form>
     {% else %}
       <div class="mt-3">
-        <a href="{% url 'workflows:pending_list' %}" class="btn btn-secondary">
+        <a href="{% url 'workflows:pending_table' %}" class="btn btn-secondary">
           &larr; {% trans 'Back to Pending' %}
         </a>
       </div>
