--- a/trustpoint/templates/setup_wizard/import_method_select.html
+++ b/trustpoint/templates/setup_wizard/import_method_select.html
@@ -21,7 +21,7 @@
         </div>
         <div class="card-footer d-flex">
             <div class="tp-card-btn-footer m-1">
-                <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary">{% trans 'Back' %}</a>
+                <a href="{% url 'setup_wizard:select_tls_server_credential' %}" class="btn btn-secondary">{% trans 'Back' %}</a>
             </div>
         </div>
     </div>
