Certificate profile management

--- a/trustpoint/templates/pki/cert_profiles/config.html
+++ b/trustpoint/templates/pki/cert_profiles/config.html
@@ -20,7 +20,7 @@
                 <div class="tp-kvp-list">
                     <div>
                         <div>{% trans 'Unique Name' %}</div>
-                        <div><input type="text" name="unique_name" value="{{ profile.unique_name }}" /></div>
+                        <div><input type="text" class="form-control" name="unique_name" value="{{ profile.unique_name }}" /></div>
                     </div>
                 </div>
                 <h2>{% trans 'Profile Details' %}</h2>
