made the view from list to card in issue application credential

--- a/trustpoint/templates/devices/credentials/issue_credential.html
+++ b/trustpoint/templates/devices/credentials/issue_credential.html
@@ -13,12 +13,12 @@
             <div class="col-md-4 d-flex align-items-stretch">
                 <div class="card w-100 mb-3">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ section.heading }}</h5>
+                        <h5 class="card-title"><strong>{{ section.heading }}</strong></h5>
                         <hr>
                         <p class="card-text flex-grow-1">{{ section.description }}</p>
                         <a href="{% url section.url pk=device.pk %}"
                            class="btn mt-auto w-100 {% if section.enabled == False %} btn-secondary disabled" disabled {% else %} btn-primary" {% endif %}>
-                          {{ section.heading }}
+                          Issue Credential
                         </a>
                     </div>
                 </div>
