--- a/trustpoint/templates/management/help.html
+++ b/trustpoint/templates/management/help.html
@@ -142,6 +142,25 @@
             </div>
         </div>
 
+        <!-- API Documentation -->
+        <div class="col-md-6">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5>
+                        <svg class="bi me-2" fill="currentColor" role="img" width="20" height="20">
+                            <use href="{% static 'img/icons.svg' %}#icon-swagger"></use>
+                        </svg>
+                        API Documentation
+                    </h5>
+                    <p class="text-muted">Explore the REST API documentation and try out endpoints.</p>
+                    <a href="/swagger/" 
+                       class="btn btn-primary" aria-label="View API documentation">
+                        View API Docs
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <!-- Contact Us -->
         <div class="col-md-6">
             <div class="card h-100">
