--- a/trustpoint/templates/pki/cert_profiles/confirm_delete.html
+++ b/trustpoint/templates/pki/cert_profiles/confirm_delete.html
@@ -15,29 +15,17 @@
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
-                    {% for profile in profiles %}
+                    {% for profile in cert_profiles %}
                         <h2>({{ forloop.counter }}) {% trans 'Certificate Profile' %}: {{ profile.unique_name }}</h2>
                         <hr class="hr-m">
                         <div class="tp-kvp-list">
                             <div>
                                 <div>{% trans 'Certificate Profile' %}</div>
                                 <div>
-                                    <a href="{% url 'pki:certificate-profiles' pk=profile.id %}">
+                                    <a href="{% url 'pki:cert_profiles-details' pk=profile.id %}">
                                         {{ profile.unique_name }}
                                     </a>
                                 </div>
-                            </div>
-                            <div>
-                                <div>{% trans 'Serial Number' %}</div>
-                                <div>{{ owner_credential.credential.certificate.serial_number }}</div>
-                            </div>
-                            <div>
-                                <div>Fingerprint (SHA256)</div>
-                                <div>{{ owner_credential.credential.certificate.sha256_fingerprint }}</div>
-                            </div>
-                            <div>
-                                <div>Valid for number of IDevIDs</div>
-                                <div>{{ owner_credential.idevid_ref_set.count }}</div>
                             </div>
                         </div>
                     {% endfor %}
@@ -47,7 +35,7 @@
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'pki:owner_credentials' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
-                    <button type="submit" class="btn btn-danger">{% trans 'Delete DevOwnerIDs' %}</button>
+                    <button type="submit" class="btn btn-danger">{% trans 'Delete Profiles' %}</button>
                 </div>
             </div>
         </div>
