--- a/trustpoint/templates/pki/cert_profiles/config.html
+++ b/trustpoint/templates/pki/cert_profiles/config.html
@@ -3,45 +3,64 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-
 <div class="card">
 
     <div class="card-header">
         <div class="">
-            <h1>{% trans 'Edit Certificate Profile' %}</h1>
+            {% if is_new %}
+                <h1>{% trans 'Add Certificate Profile' %}</h1>
+            {% else %}
+                <h1>{% trans 'Edit Certificate Profile' %}</h1>
+            {% endif %}
         </div>
     </div>
     <form method="post">
         <div class="card-body">
             <div class="tp-card-centered-content">
                 {% csrf_token %}
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
                 <h2>{% trans 'General' %}</h2>
                 <hr class="hr-m">
                 <div class="tp-kvp-list">
                     <div>
                         <div>{% trans 'Unique Name' %}</div>
-                        <div><input type="text" class="form-control" name="unique_name" value="{{ profile.unique_name }}" /></div>
+                        <div><input type="text" class="form-control {% if form.unique_name.errors %}is-invalid{% endif %}" name="unique_name" value="{{ form.unique_name.value }}" id="unique_name" aria-describedby="unique_nameFeedback" /></div>
+                        {% for error in form.unique_name.errors %}
+                            <div class="invalid-feedback" id="unique_nameFeedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div>
+                        <div>{% trans 'Is (enabled in new domains by) default' %}</div>
+                        <div>
+                            <input type="checkbox" name="is_default" {% if form.is_default.value %}checked{% endif %} />
+                        </div>
                     </div>
                 </div>
                 <h2>{% trans 'Profile Details' %}</h2>
                 <hr class="hr-m">
-                <textarea class="form-control" id="json-editor" name="profile_json" rows="10"></textarea>
+                <textarea class="form-control" id="json-editor" name="profile_json" rows="10">{{ profile_json }}</textarea>
+                {% for error in form.profile_json.errors %}
+                    <div class="error">{{ error }}</div>
+                {% endfor %}
             </div>
         </div>
         <div class="card-footer d-flex">
             <div class="tp-card-btn-footer m-1">
                 <a href="{% url 'pki:cert_profiles' %}" class="btn btn-secondary">{% trans 'Back' %}</a>
-                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
             </div>
         </div>
     </form>
 </div>
 
-{{ profile_json|json_script:"json-data" }}
-
-<script>
-    const data = JSON.parse(document.getElementById("json-data").textContent);
-    document.getElementById("json-editor").textContent = JSON.stringify(data, null, 2);
-</script>
+{% if json_valid %}
+    {{ profile_json|json_script:"json-data" }}
+    <script>
+        const data = JSON.parse(document.getElementById("json-data").textContent);
+        document.getElementById("json-editor").textContent = JSON.stringify(data, null, 2);
+    </script>
+{% endif %}
 
 {% endblock content %}
